--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "node.js": "^0.0.1-security",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
+    "sass-embedded": "^1.93.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
