--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^14.0.0",
     "axios": "^1.12.2",
     "node.js": "^0.0.1-security",
     "vue": "^3.5.18",
